// ER-модель: игровая соцсеть Steam
// Визуализация: https://dbdiagram.io/d

Table players {
  player_id int [pk, increment, note: 'Суррогатный ключ']
  steam_id varchar [unique, not null, note: 'Идентификатор Steam']
  username varchar [not null]
}

Table games {
  game_id int [pk, increment]
  app_id int [unique, not null, note: 'Steam App ID']
  title varchar [not null]
}

Table genres {
  genre_id int [pk, increment]
  name varchar [unique, not null]
}

Table game_genres {
  game_id int [not null, ref: > games.game_id]
  genre_id int [not null, ref: > genres.genre_id]
  Note: 'M:N нормализовано; в упрощении одна запись на игру'
  indexes {
    (game_id, genre_id) [pk]
  }
}

Table ownerships {
  player_id int [not null, ref: > players.player_id]
  game_id int [not null, ref: > games.game_id]
  Note: 'Игрок владеет игрой; пара уникальна'
  indexes {
    (player_id, game_id) [pk]
  }
}

Table friendships {
  player_low_id int [not null, ref: > players.player_id]
  player_high_id int [not null, ref: > players.player_id]
  Note: 'Симметричная дружба: low < high'
  indexes {
    (player_low_id, player_high_id) [pk]
  }
}
